fix: Card type 2 spacing

--- a/frontend_bundler/client/app/styles/components/card.scss
+++ b/frontend_bundler/client/app/styles/components/card.scss
@@ -174,6 +174,7 @@
 
         .card-img {
             height: 270px;
+            margin-bottom: 0;
 
             @include mq($until: md) {
                 height: 148px;
@@ -182,6 +183,7 @@
 
         .card-infobox {
             flex: 1;
+            padding-top: 20px;
 
             .infobox {
                 height: 100%;
