--- a/frontend_bundler/client/app/styles/components/carousel-posts.scss
+++ b/frontend_bundler/client/app/styles/components/carousel-posts.scss
@@ -51,7 +51,6 @@
 
             .card-infobox {
                 padding: 20px;
-                padding-top: 0;
             }
         }
 
